# MicroscoPy

./: .gitignore  README.md  Testing_funtion.ipynb  Testing_funtion.py  Testing_models.ipynb  Visualize.ipynb  Visualize_results.ipynb  check_error_testing_models.py  check_predictions.py  environment.yml  evaluate.py  evaluate_0.py  evaluate_1.py  evaluate_2.py  evaluate_3.py  evaluate_big_models.py  evaluate_lr.py  evaluate_pytorch.py  evaluate_tensorflow.py  gitignore  log_file_0  log_file_0_1  main.py  microscopy_env.yml  predict.py  predict_1.py  predict_2.py  pyproject.toml  recalculate_results.py  requirements.txt  test_gpu.py  testin_mix.py  testing_mix_inverse.py  testing_models.py  testing_models_windows.py
.hydra/: config.yaml  hydra.yaml
conf/: EM_crap_2x_03.yaml  EM_crap_2x_05.yaml  EM_crap_2x_09.yaml  EM_crap_4x_03.yaml  big_models.yaml  config.yaml  config_EM2x.yaml  config_EMcrap.yaml
general_configs/: dataset_configuration.yaml  dataset_configuration_placebo.yaml  dataset_configuration_scale2.yaml  model_configuration.yaml
microscopy/: ILNIQE.py  __init__.py  crappifiers.py  custom_callbacks.py  datasets.py  metrics.py  model_utils.py  optimizer_scheduler_utils.py  pytorch_callbacks.py  tensorflow_callbacks.py  trainers.py  utils.py
notebooks/: Electron_microcopy_noise_analysis.ipynb  Evaluation metrics EGM.ipynb  Evaluation_metrics.ipynb  TensorFlow_Dataset.ipynb  Testing_SSIM.ipynb  nanopyx_sr.ipynb  requirements.txt
src/: ILNIQE.py  __init__.py  crappifiers.py  datasets.py  metrics.py  model_utils.py  optimizer_scheduler_utils.py  trainers.py  (+2 more)
(+50 files in other folders)
